<resources>
    <string name="app_name">CoPill</string>
    <string name="connexion_activity_name">Connexion</string>
    <string name="register_activity_name">Inscription</string>
    <string name="home_activity_name">Accueil</string>
    <string name="add_activity_name">Ajout médicament</string>
    <string name="profil_activity_name">Mon profil</string>
    <string name="details_activity_name">Détails</string>
    <string name="login">Utilisateur :</string>
    <string name="logout">Déconnexion</string>
    <string name="password">Mot de passe :</string>
    <string name="sign_in">Se connecter</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="first_name">Prénom :</string>
    <string name="last_name">Nom :</string>
    <string name="email">Email :</string>
    <string name="pill_code">Code pilulier :</string>
    <string name="monday">Lundi</string>
    <string name="tuesday">Mardi</string>
    <string name="wednesday">Mercredi</string>
    <string name="thursday">Jeudi</string>
    <string name="friday">Vendredi</string>
    <string name="saturday">Samedi</string>
    <string name="sunday">Dimanche</string>
    <string name="abbr_monday">L</string>
    <string name="abbr_tuesday">M</string>
    <string name="abbr_wednesday">M</string>
    <string name="abbr_thursday">J</string>
    <string name="abbr_friday">V</string>
    <string name="abbr_saturday">S</string>
    <string name="abbr_sunday">D</string>
    <string name="add_pill">Ajouter un nouveau médicament</string>
    <string name="save">Enregistrer</string>
    <string name="cancel">Annuler</string>
    <string name="pill_name">Nom du médicament</string>
    <string name="day">Jour</string>
    <string name="hour">Heure</string>
    <string name="default_hour">12:30</string>
    <string name="select">Sélectionner</string>
    <string name="options">Options</string>
    <string name="quantity">Quantité</string>
    <string name="default_quantity">1</string>
    <string name="more">+</string>
    <string name="less">-</string>
    <string name="notification">Notification :</string>
    <string name="alarm">Alarme :</string>
    <string name="light">Lumière :</string>
    <string name="new_password">Nouveau mot de passe :</string>
    <string name="confirm_password">Confirmer le mot de passe :</string>
    <string name="change_informations">Modifier mes informations</string>
    <string name="change_password">Changer de mot de passe</string>
    <string name="notification_title">Vous avez un médicament à prendre !</string>
    <string name="notification_channel_id">channel_01</string>
</resources>
